--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html {
 
 body {
   font-family: "Inter", Helvetica, sans-serif;
-  font-size: 2rem;
+  font-size: 1.39rem;
   line-height: 1.25;
   color: #2c2c2c;
   max-width: 100vw;
